--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -1,5 +1,5 @@
 <%= nav_link t("users.notifications.index.title"), user_notifications_path, icon: "🔔" %>
-<%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "💰" %>
+<%= nav_link t("users.referrals.index.title"), user_referrals_path, icon: "🎁" %>
 <%= nav_link t("users.connected_accounts.index.title"), user_connected_accounts_path, icon: "🔗" if Devise.omniauth_configs.keys.any? %>
 <%= nav_link t("shared.navigation.edit_profile"), edit_user_registration_path, icon: "🔐" %>
 <%= nav_link t("shared.navigation.logout"), destroy_user_session_path, icon: "👋", data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") } %>
