--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,38 +3,30 @@
 
 <%# Sidebar content %>
 <aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative bg-base-300 min-w-52 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
-  <div class="flex-1">
-    <details class="group relative" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close" <% if !Current.organization %>open data-dropdown-close-on-click-outside-value="false"<% end %>>
-      <summary class="m-2 mb-0 du-btn du-btn-ghost font-medium text-sm p-2 cursor-pointer [&::-webkit-details-marker]:hidden flex items-center justify-between group-open:bg-base-300">
-        <% if Current.organization %>
-        <div class="inline-flex items-center gap-2 max-w-40">
-          <div>
-            <%= organization_avatar(Current.organization, classes: "size-5") %>
-          </div>
-          <div class="truncate">
-            <%= Current.organization.name %>
-          </div>
-        </div>
-        <% else %>
-          <div class="py-1 inline-flex">
-            <%= t("shared.navigation.select_organization") %>
-          </div>
-        <% end %>
-        <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
-      </summary>
-      <div class="absolute top-full left-2 right-2 mt-1 bg-base-200 border border-base-content/20 z-50 rounded-lg p-1 du-menu">
-        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] %>
-        <% Current.organizations.excluding(Current.organization).each do |organization| %>
-          <%= nav_link organization.name, organization_dashboard_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
-        <% end %>
-      </div>
-    </details>
-
-    <% if Current.organization %>
-      <div class="du-menu w-full">
-        <%= render "shared/sidebar_links" %>
-      </div>
-    <% end %>
+  <div class="flex-1 min-w-64">
+    <ul class="du-menu w-full">
+      <li>
+        <details <% if !Current.organization %>open<% end %>>
+          <summary>
+            <% if Current.organization %>
+              <%= organization_avatar(Current.organization, classes: "size-5") %>
+              <%= Current.organization.name %>
+            <% else %>
+              <%= t("shared.navigation.select_organization") %>
+            <% end %>
+          </summary>
+          <ul>
+            <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
+            <% Current.organizations.excluding(Current.organization).each do |organization| %>
+              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
+            <% end %>
+          </ul>
+        </details>
+      </li>
+      <% if Current.organization %>
+          <%= render "shared/sidebar_links" %>
+      <% end %>
+    </ul>
   </div>
 
   <div class="du-menu w-full">
