--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -12,10 +12,7 @@
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
         <li>
-          <%= active_link_to organizations_path, class_active: "du-menu-active", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [ "index" ] ] do %>
-            <%= inline_svg_tag "svg/globe-europe-africa.svg" %>
-            <%= t("shared.navigation.organizations") %>
-          <% end %>
+          <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]], wrapper: nil %>
           <ul>
             <% Current.organizations.each do |organization| %>
               <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6"), active: :inclusive %>
@@ -32,12 +29,12 @@
       <div class="bg-base-100 overflow-y-auto ml-0 m-2 rounded-xl border border-base-content/20 justify-between flex flex-col max-h-dvh min-w-64">
         <ul class="du-menu w-full">
           <li>
-            <details data-controller="dropdown" data-action="keydown.esc@window->dropdown#close" class="relative">
+            <details>
               <summary>
                 <%= organization_avatar(Current.organization, classes: "size-6") %>
                 <%= Current.organization.name %>
               </summary>
-              <ul class="absolute top-full left-0 right-0 mt-1 bg-base-200 border border-base-content/20 z-50 rounded-lg p-1 du-menu">
+              <ul>
                 <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [ [ "organizations/memberships", "organizations/invitations", "organizations/membership_requests" ], [] ] %>
                 <%= nav_link t("organizations.show.title"), organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "show" ] ] %>
                 <% if Current.membership.admin? %>
