use daisy ui du-input instead of form-input

--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -5,7 +5,7 @@
     <% resource.class.invite_key_fields.each do |field| %>
       <div class="space-y-1">
         <%= f.label field, class: "block text-sm font-medium" %>
-        <%= f.text_field field, class: "form-input", autofocus: true %>
+        <%= f.text_field field, class: "du-input w-full", autofocus: true %>
       </div>
     <% end %>
 
