--- a/app/views/organizations/invitations/new.html.erb
+++ b/app/views/organizations/invitations/new.html.erb
@@ -9,7 +9,7 @@
         <%= form.label :email %>
         <%= form.email_field :email,
                             placeholder: "hello@superails.com",
-                            class: "form-input",
+                            class: "du-input w-full",
                             autocomplete: "off",
                             autocorrect: "off",
                             autocapitalize: "off",
