--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -6,7 +6,7 @@
 
     <div class="space-y-1">
       <%= f.label :email, t("devise.views.confirmations.new.email_label"), class: "block text-sm font-medium" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-input", placeholder: t("devise.views.confirmations.new.email_placeholder") %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "du-input w-full", placeholder: t("devise.views.confirmations.new.email_placeholder") %>
       <p class="text-xs"><%= t("devise.views.confirmations.new.email_help") %></p>
     </div>
 
