--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -9,12 +9,12 @@
       <% if @minimum_password_length %>
         <p class="text-xs"><%= t("devise.views.passwords.edit.password_minimum", count: @minimum_password_length) %></p>
       <% end %>
-      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.passwords.edit.password_placeholder") %>
     </div>
 
     <div class="space-y-1">
       <%= f.label :password_confirmation, t("devise.views.passwords.edit.password_confirmation_label"), class: "block text-sm font-medium" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.passwords.edit.password_confirmation_placeholder") %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.passwords.edit.password_confirmation_placeholder") %>
     </div>
 
     <div class="pt-2">
