--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,7 +4,7 @@
 
     <div class="space-y-1">
       <%= f.label :email, t("devise.views.passwords.new.email_label"), class: "block text-sm font-medium" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input", placeholder: t("devise.views.passwords.new.email_placeholder") %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "du-input w-full", placeholder: t("devise.views.passwords.new.email_placeholder") %>
       <p class="text-xs"><%= t("devise.views.passwords.new.email_help") %></p>
     </div>
 
