--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 
     <div class="space-y-1">
       <%= f.label :email, t("devise.views.registrations.edit.email_label"), class: "block text-sm font-medium" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input", placeholder: t("devise.views.registrations.edit.email_placeholder") %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "du-input w-full", placeholder: t("devise.views.registrations.edit.email_placeholder") %>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -19,7 +19,7 @@
     <div class="space-y-1">
       <%= f.label :password, t("devise.views.registrations.edit.password_label"), class: "block text-sm font-medium" %>
       <p class="text-xs"><%= t("devise.views.registrations.edit.password_help") %></p>
-      <%= f.password_field :password, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.registrations.edit.password_placeholder") %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.registrations.edit.password_placeholder") %>
       <% if @minimum_password_length %>
         <p class="text-xs"><%= t("devise.views.registrations.edit.password_minimum", count: @minimum_password_length) %></p>
       <% end %>
@@ -27,13 +27,13 @@
 
     <div class="space-y-1">
       <%= f.label :password_confirmation, t("devise.views.registrations.edit.password_confirmation_label"), class: "block text-sm font-medium" %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input", placeholder: t("devise.views.registrations.edit.password_confirmation_placeholder") %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "du-input w-full", placeholder: t("devise.views.registrations.edit.password_confirmation_placeholder") %>
     </div>
 
     <div class="space-y-1">
       <%= f.label :current_password, t("devise.views.registrations.edit.current_password_label"), class: "block text-sm font-medium" %>
       <p class="text-xs"><%= t("devise.views.registrations.edit.current_password_help") %></p>
-      <%= f.password_field :current_password, autocomplete: "current-password", class: "form-input", placeholder: t("devise.views.registrations.edit.current_password_placeholder") %>
+      <%= f.password_field :current_password, autocomplete: "current-password", class: "du-input w-full", placeholder: t("devise.views.registrations.edit.current_password_placeholder") %>
     </div>
 
     <div class="pt-2">
