--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="space-y-6">
   <% available_providers = Devise.omniauth_configs.keys %>
   <% if available_providers.any? %>
-    <%= render PageComponent.new(title: t(".available_connections"), full_width: false) do |component| %>
+    <%= render PageComponent.new(title: t(".available_connections")) do |component| %>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
         <% available_providers.each do |provider| %>
           <div class="border border-base-content/20 p-4 rounded-lg hover:bg-base-200 transition-colors">
@@ -26,12 +26,26 @@
     <% end %>
   <% end %>
 
-  <%= render PageComponent.new(title: t(".your_connected_accounts"), full_width: false) do |component| %>
+  <%= render PageComponent.new(title: t(".your_connected_accounts")) do |component| %>
     <% if @connected_accounts.any? %>
-      <div class="space-y-3">
-        <% current_user.connected_accounts.each do |connected_account| %>
-          <%= render "connected_account", connected_account: connected_account %>
-        <% end %>
+      <div class="table-responsive">
+        <table>
+          <thead>
+            <tr>
+              <th>Platform</th>
+              <th>Name</th>
+              <th>Handle</th>
+              <th>Email</th>
+              <th>Connected</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% current_user.connected_accounts.each do |connected_account| %>
+              <%= render "connected_account", connected_account: connected_account %>
+            <% end %>
+          </tbody>
+        </table>
       </div>
     <% else %>
       <div class="border border-base-content/20 p-6 rounded-lg text-center flex flex-col items-center gap-3">
