--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,11 +15,13 @@
       <% end %>
     </button>
 
-    <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input du-input-sm gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
-      <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
-      <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
-      <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
-      <kbd class="kbd kbd-sm hidden lg:inline-flex">K</kbd>
+    <% if Flipper.enabled?(:search) %>
+      <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input du-input-sm gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
+        <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
+        <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
+        <kbd class="kbd kbd-sm hidden lg:inline-flex">⌘</kbd>
+          <kbd class="kbd kbd-sm hidden lg:inline-flex">K</kbd>
+      <% end %>
     <% end %>
   </div>
 
@@ -41,6 +43,7 @@
           <%= active_link_to "⚙️ Jobs", "/jobs", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" %>
           <%= active_link_to "📊 Analytics", "/analytics", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" %>
           <%= active_link_to "💾 Active Storage", "/active_storage_dashboard", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" %>
+          <%= active_link_to "🎛️ Feature Flags", "/feature_flags", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" %>
           <%= active_link_to "👀 Lookbook", "/lookbook", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" if Rails.env.development? %>
           <%= active_link_to "📨 Letter Opener", "/letter_opener", class_active: "du-btn-active", class: "whitespace-nowrap du-btn du-btn-ghost justify-start w-full" if Rails.env.development? %>
         </div>
