--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,6 +16,8 @@
     </button>
 
     <%# if Flipper.enabled?(:search, current_user) %>
+    <%# if Flipper[:search].enabled?(current_user) %>
+    <%# if Flipper[:search].enabled? %>
     <%= active_link_to search_path, data: { turbo_frame: :modal, controller: "click", action: "keydown.meta+k@window->click#click keydown.ctrl+k@window->click#click" }, class: "du-input du-input-sm gap-2 cursor-pointer lg:min-w-64 rounded-lg" do %>
       <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-4 w-4 h-4" %>
       <span class="grow hidden lg:block"><%= t("search.index.title") %></span>
