--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,34 +2,32 @@
 <div data-mobile-sidebar-target="backdrop" class="lg:hidden fixed inset-0 bg-gray-800/50 z-40 hidden" data-action="click->mobile-sidebar#close"></div>
 
 <%# Sidebar content %>
-<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative bg-base-300 min-w-52 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
-  <div class="flex-1 min-w-64">
-    <ul class="du-menu w-full">
-      <li>
-        <details <% if !Current.organization %>open<% end %>>
-          <summary>
-            <% if Current.organization %>
-              <%= organization_avatar(Current.organization, classes: "size-5") %>
-              <%= Current.organization.name %>
-            <% else %>
-              <%= t("shared.navigation.select_organization") %>
-            <% end %>
-          </summary>
-          <ul>
-            <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [ "index" ] ] %>
-            <% Current.organizations.excluding(Current.organization).each do |organization| %>
-              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
-            <% end %>
-          </ul>
-        </details>
-      </li>
-      <% if Current.organization %>
-          <%= render "shared/sidebar_links" %>
-      <% end %>
-    </ul>
-  </div>
+<aside data-mobile-sidebar-target="sidebar" class="fixed lg:relative bg-base-300 h-dvh -translate-x-full lg:translate-x-0 transition-transform duration-300 z-50 flex flex-col overflow-y-auto">
+  <ul class="du-menu w-full flex-1">
+    <li>
+      <details <% if !Current.organization %>open<% end %>>
+        <summary>
+          <% if Current.organization %>
+            <%= organization_avatar(Current.organization, classes: "size-5") %>
+            <%= Current.organization.name %>
+          <% else %>
+            <%= t("shared.navigation.select_organization") %>
+          <% end %>
+        </summary>
+        <ul>
+          <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [ "index" ] ] %>
+          <% Current.organizations.excluding(Current.organization).each do |organization| %>
+            <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
+          <% end %>
+        </ul>
+      </details>
+    </li>
+    <% if Current.organization %>
+        <%= render "shared/sidebar_links" %>
+    <% end %>
+  </ul>
 
-  <div class="du-menu w-full">
+  <ul class="du-menu w-full mb-8">
     <% if Current.organization %>
       <%= nav_link t("organizations.memberships.index.title"), organization_memberships_path(Current.organization), icon: "svg/user-group.svg", badge: Current.organization.user_requests.pending.count, active: [ [ "organizations/memberships", "organizations/invitations", "organizations/membership_requests" ], [] ] %>
       <%= nav_link t("organizations.show.title"), organization_path(Current.organization), icon: "svg/cog-6-tooth.svg", active: [ [ "organizations" ], [ "show" ] ] %>
@@ -38,7 +36,5 @@
         <%= nav_link t("organizations.subscriptions.index.title"), organization_subscriptions_path(Current.organization), icon: subscription_status_label(Current.organization) if Rails.application.credentials.dig(:stripe, :private_key).present? %>
       <% end %>
     <% end %>
-
-    <%= render "shared/sidebar_toggle" %>
-  </div>
+  </ul>
 </aside>
