--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -6,33 +6,15 @@
 
     <%= turbo_frame_tag :results do %>
       <% if @organizations.present? %>
-        <ul class="du-list bg-base-100 rounded-box shadow-md">
-          <li class="p-4 pb-2 text-xs opacity-60 tracking-wide">Organizations</li>
-          <% @organizations.each do |organization| %>
-            <li>
-              <% path = organization.owner?(current_user) ? organization_path(organization) : public_organization_path(organization) %>
-              <%= link_to path, data: { turbo_frame: :_top }, class: "du-list-row flex items-center gap-3 p-3 hover:bg-base-200 transition-colors" do %>
-                <%= organization_avatar(organization) %>
-                <div class="flex-1">
-                  <div class="font-medium">
-                    <%= highlight(organization.name, params[:query]) %>
-                  </div>
-                </div>
-                <%= inline_svg_tag "svg/chevron-right.svg", class: "size-4" %>
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
+        <%= render PageComponent.new(title: "Organizations") do %>
+          <%= render "organizations/table", organizations: @organizations %>
+        <% end %>
       <% elsif params[:query].present? %>
-        <div class="bg-base-100 rounded-box shadow-md p-6 text-center space-y-3">
-          <div class="text-base-content/60">
+        <%= render EmptyStateComponent.new(title: "No results found", subtitle: "Try adjusting your search terms") do |c| %>
+          <% c.with_icon do %>
             <%= inline_svg_tag "svg/magnifying-glass.svg", class: "size-12 mx-auto" %>
-          </div>
-          <div class="font-medium text-base-content/80">No results found</div>
-          <div class="text-sm text-base-content/60">
-            Try adjusting your search terms
-          </div>
-        </div>
+          <% end %>
+        <% end %>
       <% end %>
     <% end %>
   </div>
