Replace :unprocessable_entity with :unprocessable_content
warning: Status code :unprocessable_entity is deprecated and will be removed in a future version of Rack. Please use :unprocessable_content instead.

--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -42,8 +42,8 @@ class <%= controller_class_name %>Controller < ApplicationController
         format.html { redirect_to @<%= singular_table_name %>, notice: <%= %("#{human_name} was successfully created.") %> }
         format.json { render :show, status: :created, location: <%= "@#{singular_table_name}" %> }
       else
-        format.html { render :new, status: :unprocessable_entity }
-        format.json { render json: <%= "@#{orm_instance.errors}" %>, status: :unprocessable_entity }
+        format.html { render :new, status: :unprocessable_content }
+        format.json { render json: <%= "@#{orm_instance.errors}" %>, status: :unprocessable_content }
       end
     end
   end
@@ -55,8 +55,8 @@ class <%= controller_class_name %>Controller < ApplicationController
         format.html { redirect_to @<%= singular_table_name %>, notice: <%= %("#{human_name} was successfully updated.") %> }
         format.json { render :show, status: :ok, location: <%= "@#{singular_table_name}" %> }
       else
-        format.html { render :edit, status: :unprocessable_entity }
-        format.json { render json: <%= "@#{orm_instance.errors}" %>, status: :unprocessable_entity }
+        format.html { render :edit, status: :unprocessable_content }
+        format.json { render json: <%= "@#{orm_instance.errors}" %>, status: :unprocessable_content }
       end
     end
   end
