--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,8 +1,4 @@
-<% if content_for(:title).present? %>
-  <title><%= content_for(:title) %> - <%= Rails.application.config_for(:settings).dig(:site, :name) %></title>
-<% else %>
-  <title><%= [ if defined?(Current.organization) && Current.organization&.name.present? then Current.organization.name else Rails.application.config_for(:settings).dig(:site, :name) end ].compact.join(" - ") %></title>
-<% end %>
+<title><%= formatted_title %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
